# robotiq

robotiq_2f_85_gripper_visualization/meshes/visual/: robotiq_arg2f_85_base_link_scaled.dae
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_85.gazebo.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
robotiq_3f_gripper_articulated_gazebo_plugins/src/: RobotiqHandPlugin.cpp
robotiq_gazebo_plugins/: CMakeLists.txt  package.xml
robotiq_gazebo_plugins/include/robotiq_gazebo_plugins/: mimic_joint_plugin.h
robotiq_gazebo_plugins/src/: mimic_joint_plugin.cpp
