<?xml version="1.0"?>
<package format="2">
  <name>robotiq_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The robotiq_gazebo_plugins package</description>

  <maintainer email="jdoe@robotiq.com">jdoe</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" />
  </export>
</package>
